--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,16 @@
+.option_box1 {
+    padding: 0.5em 1em;
+    margin: 2em 0;
+    font-weight: bold;
+    color: #6091d3;/*文字色*/
+    background: #FFF;
+    border: solid 3px #6091d3;/*線*/
+    border-radius: 10px;/*角の丸み*/
+}
+.option_box1 p {
+    margin: 0; 
+    padding: 0;
+}
 .filter-container {
     display: none;
     position: absolute;
