--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 /* CSSファイル: styles.css */
 
-/* 全体のスタイル */
 body {
     font-family: "Meiryou", "MeiryouUI", sans-serif;
     background-color: #f0f8f7; /* ページ全体の背景色 */
@@ -13,6 +12,87 @@ body {
 h1, h3 {
     color: #005f4b; /* 緑の基調色 */
     text-align: left;
+}
+
+.option_box1 {
+    background-color: #e3f2fd;
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+
+.filter-button {
+    background-color: #00796b;
+    color: #fff;
+    border: none;
+    padding: 10px 15px;
+    margin: 5px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.filter-button:hover {
+    background-color: #005f4b;
+}
+
+.filter-container {
+    background-color: #ffffff;
+    border: 1px solid #ccc;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    position: absolute;
+    z-index: 10;
+    max-height: 300px;
+    overflow-y: auto;
+    padding: 10px;
+}
+
+.filter-header, .filter-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.filter-content {
+    margin: 10px 0;
+}
+
+.filter-group {
+    display: flex;
+    align-items: center;
+    margin: 5px 0;
+}
+
+.filter-action-buttons {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+
+.filter-action-buttons button {
+    background-color: #00796b;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.filter-action-buttons button:hover {
+    background-color: #005f4b;
+}
+
+.close-filter {
+    background-color: #e57373;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.close-filter:hover {
+    background-color: #d32f2f;
 }
 
 /* テーブル全体のスタイル */
@@ -50,28 +130,4 @@ table.display tbody tr:last-of-type {
 
 table.display tbody tr:hover {
     background-color: #f1f1f1;
-}
-
-/* フィルターボタンのスタイル */
-.filter-button {
-    background-color: #00796b;
-    color: #fff;
-    border: none;
-    padding: 10px 15px;
-    margin: 5px;
-    cursor: pointer;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
-
-.filter-button:hover {
-    background-color: #005f4b;
-}
-
-/* オプションボックス */
-.option_box1 {
-    background-color: #e3f2fd;
-    padding: 10px;
-    border-radius: 5px;
-    margin-bottom: 20px;
 }
