--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,13 @@ h1, h3 {
     margin-bottom: 20px;
 }
 
+.option_box2 {
+    background-color: #e3f2fd;
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+
 .filter-button {
     background-color: #00796b;
     color: #fff;
