--- a/osusume_area.css
+++ b/osusume_area.css
@@ -13,7 +13,7 @@ h1, h2, h3 {
 }
 
 h1 {
-    text-align: center;
+    text-align: left;
     font-size: 2em;
     margin-bottom: 20px;
 }
@@ -113,6 +113,7 @@ nav ul.menu li a:hover {
     background-color: #2c5f2d; /* ホバー時の背景色 */
 }
 
+/* 折り畳みのスタイル */
 details summary {
     cursor: pointer;
     padding: 10px;
