--- a/osusume_area.css
+++ b/osusume_area.css
@@ -155,6 +155,6 @@ details table {
     color: #f0f8f5;
     padding: 10px;
     border-radius: 4px;
-    text-align: center;
+    text-align: left;
 }
 
