--- a/osusume_area.css
+++ b/osusume_area.css
@@ -77,6 +77,32 @@ strong {
     border-radius: 4px;
 }
 
+.collapsible {
+    cursor: pointer;
+    padding: 10px;
+    text-align: center;
+    background-color: #3e8c48; /* 薄めの緑色 */
+    color: #f0f8f5;
+    border: 1px solid #ffffff;
+    border-radius: 4px;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+    margin-bottom: 10px;
+}
+
+.collapsible:hover {
+    background-color: #2c5f2d;
+}
+
+.content {
+    display: none;
+    overflow: hidden;
+    border: 1px solid #2c5f2d;
+    border-radius: 4px;
+    padding: 0 10px;
+    background-color: #e7f3e7;
+}
+
 /* ナビゲーションバーのスタイル */
 nav {
     background-color: #3e8c48; /* 薄めの緑色 */
@@ -157,4 +183,6 @@ details table {
     border-radius: 4px;
     text-align: left;
 }
+
+
 
