--- a/otoiawase.css
+++ b/otoiawase.css
@@ -1,3 +1,11 @@
+h1 {
+    color: #2c5f2d;
+    text-shadow: 1px 1px 2px #aaa;
+    text-align: left;
+    font-size: 2em;
+    margin-bottom: 20px;
+}
+
 iframe {
     width: 100%;
     height: 600px;
