--- a/otoiawase.css
+++ b/otoiawase.css
@@ -16,7 +16,7 @@ iframe {
 
 .form-wrapper {
     width: 100%;
-    margin: auto;
+    margin: 0;
     background-color: #e7f3e7;
     padding: 20px;
     border: 2px solid #2c5f2d;
