--- a/osusume_area.css
+++ b/osusume_area.css
@@ -7,7 +7,12 @@ body {
     padding: 20px;
 }
 
-h1, h2, h3 {
+h1 {
+    color: #005f4b;
+    text-align: left;
+}
+
+h2, h3 {
     color: #2c5f2d;
     text-shadow: 1px 1px 2px #aaa;
 }
