--- a/otoiawase.css
+++ b/otoiawase.css
@@ -1,9 +1,22 @@
 h1 {
+    color: #005f4b;
+    text-align: left;
+}
+
+h2 {
     color: #2c5f2d;
     text-shadow: 1px 1px 2px #aaa;
+}
+
+h1 {
     text-align: left;
     font-size: 2em;
     margin-bottom: 20px;
+}
+
+h2 {
+    border-bottom: 2px solid #2c5f2d;
+    padding-bottom: 5px;
 }
 
 iframe {
