--- a/otoiawase.css
+++ b/otoiawase.css
@@ -1,3 +1,11 @@
+body {
+    font-family: "Meiryo UI", sans-serif;
+    background-color: #f0f8f5;
+    color: #333;
+    margin: 0;
+    padding: 20px;
+}
+
 h1 {
     color: #005f4b;
     text-align: left;
