--- a/styles.css
+++ b/styles.css
@@ -176,7 +176,7 @@ table.dataTable td:last-of-type, table.dataTable th:last-of-type {
 
 /* テーブルの全体スタイル */
 table.dataTable {
-    width: 90%;
+    width: 100%;
     border-collapse: collapse;
     margin: 20px 0;
     font-size: 1em;
@@ -186,35 +186,23 @@ table.dataTable {
 
 /* ナビゲーションバーのスタイル */
 nav {
-    background-color: transparent; /* 背景色を透明に */
-    padding: 0; /* 余白をなくす */
+  width: 100%;
+  height: 70px;
+  background-color: dimgray;
+  padding-top: 5px;
+  box-sizing: border-box;
 }
-
-nav ul.menu {
-    list-style: none; /* リストスタイルをなしに */
-    margin: 0;
-    padding: 0;
-    display: flex; /* フレックスボックスで横並びに */
-    justify-content: flex-start; /* 左寄せ */
-    gap: 10px; /* 各要素の間隔を調整 */
-    width: auto; /* 必要な幅だけに */
+ul {
+  display: flex;
 }
-
-nav ul.menu li {
-    margin: 0;
+li {
+  list-style: none;
 }
-
-nav ul.menu li a {
-    display: inline; /* インライン表示に変更 */
-    color: #333; /* シンプルな濃いグレーの文字 */
-    text-decoration: none; /* 下線をなくす */
-    font-weight: normal; /* 標準の文字の太さ */
-    font-size: 1rem; /* 通常の文字サイズ */
-    transition: color 0.3s ease; /* ホバー時の文字色変更をアニメーション */
-}
-
-nav ul.menu li a:hover {
-    color: #2c5f2d; /* ホバー時に緑色に変更 */
+a {
+  display: block;
+  text-decoration: none;
+  color: white;
+  margin-right: 35px;
 }
 
 details summary {
