--- a/styles.css
+++ b/styles.css
@@ -188,17 +188,17 @@ table.dataTable {
 nav {
   width: 100%;
   height: 70px;
-  background-color: dimgray;
+  background-color: #3e8c48;
   padding-top: 5px;
   box-sizing: border-box;
 }
-ul {
+ul.menu {
   display: flex;
 }
-li {
+ul.menu li {
   list-style: none;
 }
-a {
+ul.menu li a {
   display: block;
   text-decoration: none;
   color: white;
