--- a/osusume_area.css
+++ b/osusume_area.css
@@ -120,7 +120,7 @@ nav ul.menu {
     margin: 0;
     padding: 0;
     display: flex; /* フレックスボックスで横並びに */
-    justify-content: center; /* 中央に配置 */
+    justify-content: start;
     width: 100%; /* 幅を100%に */
 }
 
