--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,29 @@ body {
 }
 
 h1 {
-    color: #005f4b; /* 緑の基調色 */
+    color: #005f4b;
     text-align: left;
+}
+
+h2, h3 {
+    color: #2c5f2d;
+    text-shadow: 1px 1px 2px #aaa;
+}
+
+h1 {
+    text-align: left;
+    font-size: 2em;
+    margin-bottom: 20px;
+}
+
+h2 {
+    border-bottom: 2px solid #2c5f2d;
+    padding-bottom: 5px;
+}
+
+h3 {
+    margin-top: 20px;
+    margin-bottom: 10px;
 }
 
 nav {
